[package]
name = "budget_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = "0.12.3"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
